--- a/index.html
+++ b/index.html
@@ -9,47 +9,79 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <style>
+    :root {
+      --main-color: #00adb5;
+      --dark-bg: #1c1f26;
+      --card-bg: #2a2d34;
+      --light-bg: #ffffff;
+      --light-text: #000000;
+      --transition: 0.4s ease;
+    }
+
     body {
-      background-color: #1c1f26;
+      background-color: var(--dark-bg);
       color: #ffffff;
-      transition: background-color 0.3s, color 0.3s;
+      transition: var(--transition);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .header-title {
-      color: #00adb5;
+      color: var(--main-color);
       text-align: center;
       margin-top: 2rem;
       font-weight: bold;
+      font-size: 3rem;
+      letter-spacing: 1px;
     }
 
     .card {
       border-radius: 1rem;
       overflow: hidden;
-      transition: transform 0.2s ease-in-out;
+      transition: transform 0.3s ease-in-out, box-shadow 0.3s ease;
+      background: linear-gradient(145deg, #23262e, #1b1d23);
+      box-shadow: 0 8px 16px rgba(0, 0, 0, 0.35);
     }
 
     .card:hover {
-      transform: scale(1.03);
+      transform: translateY(-5px);
+      box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
     }
 
     .card-img-top {
-      height: 150px;
+      height: 160px;
       object-fit: cover;
+      border-bottom: 2px solid var(--main-color);
     }
 
     .card-body {
-      background-color: #2a2d34;
+      background-color: transparent;
     }
 
     .btn-custom {
       border-radius: 0.5rem;
       margin-right: 0.5rem;
+      background-color: var(--main-color);
+      border: none;
+      color: white;
+      transition: background-color var(--transition);
+    }
+
+    .btn-custom:hover {
+      background-color: #2a6e70;
     }
 
     .btn-light-mode {
-      background-color: #ffffff;
-      color: #000000;
+      background-color: var(--light-bg);
+      color: var(--light-text);
       border: none;
+      padding: 8px 16px;
+      font-weight: bold;
+      border-radius: 6px;
+      transition: var(--transition);
+    }
+
+    .btn-light-mode:hover {
+      background-color: #e2e2e2;
     }
 
     .profile-img {
@@ -57,48 +89,55 @@
       height: 150px;
       object-fit: cover;
       border-radius: 50%;
-      margin: 0 auto;
-      display: block;
-      border: 3px solid #00adb5;
+      margin: 0 auto 1rem;
+      border: 4px solid var(--main-color);
+      box-shadow: 0 0 12px var(--main-color);
+      transition: transform 0.3s ease;
     }
 
-    .social-icons {
-      margin-top: 15px;
+    .profile-img:hover {
+      transform: scale(1.05);
     }
 
     .social-icons a {
       color: #ffffff;
       margin: 0 10px;
-      font-size: 1.5rem;
-      text-decoration: none;
+      font-size: 1.6rem;
+      transition: color 0.3s ease, transform 0.3s ease;
     }
 
     .social-icons a:hover {
-      color: #00adb5;
+      color: var(--main-color);
+      transform: scale(1.2);
     }
 
     .btn-cute {
-      background-color: #00adb5;
+      background-color: var(--main-color);
       color: #fff;
       border: none;
-      padding: 8px 16px;
+      padding: 8px 20px;
       font-weight: bold;
-      border-radius: 8px;
-      transition: background-color 0.3s ease;
+      border-radius: 50px;
+      transition: background-color var(--transition), transform 0.2s ease;
       text-decoration: none;
     }
 
     .btn-cute:hover {
-      background-color: #019ca2;
-      color: #fff;
+      background-color: #00f7ff;
+      transform: translateY(-2px);
     }
 
     .gif-img {
       width: 100%;
       height: 200px;
       object-fit: cover;
-      border-radius: 10px;
+      border-radius: 12px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+      transition: transform 0.3s ease;
+    }
+
+    .gif-img:hover {
+      transform: scale(1.03);
     }
 
     .skills-container {
@@ -113,8 +152,8 @@
       flex-direction: column;
       align-items: center;
       font-size: 3rem;
-      transition: all 0.3s ease;
-      color: #00adb5;
+      transition: transform 0.3s ease, opacity 0.3s ease, filter 0.3s ease;
+      color: var(--main-color);
       cursor: pointer;
     }
 
@@ -125,7 +164,7 @@
     }
 
     .skills-container:hover .skill {
-      filter: blur(3px);
+      filter: blur(2px);
       opacity: 0.4;
     }
 
@@ -134,7 +173,110 @@
       opacity: 1;
       transform: scale(1.1);
     }
+
+    body.light-theme {
+      background-color: var(--light-bg);
+      color: var(--light-text);
+    }
+
+    body.light-theme .card {
+      background: #f9f9f9;
+      color: #000;
+    }
+
+    body.light-theme .card-body {
+      background-color: #f0f0f0;
+    }
+
+    body.light-theme .btn-custom {
+      background-color: #007bff;
+      color: #fff;
+    }
+
+    body.light-theme .btn-custom:hover {
+      background-color: #6cb0f9;
+    }
+
+    body.light-theme .social-icons a {
+      color: #000;
+    }
+
+    body.light-theme .social-icons a:hover {
+      color: #007bff;
+    }
+
+    body.light-theme .skill {
+      color: #007bff;
+    }
+
+    body.light-theme .btn-cute {
+      background-color: #4a0808;
+    }
+
+    body.light-theme .btn-cute:hover {
+      background-color: #f47676;
+    }
+
+    body.light-theme,
+    body.light-theme h1,
+    body.light-theme h2,
+    body.light-theme h3,
+    body.light-theme h4,
+    body.light-theme h5,
+    body.light-theme h6,
+    body.light-theme p,
+    body.light-theme .card-text,
+    body.light-theme .card-title {
+      color: #000000 !important;
+    }
+
+    body.light-theme {
+  background-color: #4a0808; 
+  color: #000000;
+}
+
+body.light-theme .btn {
+  color: #fff;
+  background-color: #4a0808;
+  border-color: black;
+}
+
+body.light-theme .btn:hover {
+  background-color: #e66e6e;
+  border-color: black;
+}
+
+body.light-theme .btn-custom {
+  background-color: #4a0808;
+  color: #fff;
+}
+
+body.light-theme .btn-custom:hover {
+  background-color: #f47676;
+}
+
+body.light-theme .btn-outline-info {
+  color: #eaedf1;
+  border-color: #f47676;
+}
+
+body.light-theme .btn-outline-info:hover {
+  background-color: #f47676;
+  color: #fff;
+}
+
+body.light-theme .btn-light-mode {
+  background-color: #333333;
+  color: #f5fd7e;
+}
+
+body.light-theme .btn-light-mode:hover {
+  background-color: #555555;
+}
+
+    
   </style>
+
 </head>
 
 <body>
