--- a/A08/EZ-Parallax-master/banner.html
+++ b/A08/EZ-Parallax-master/banner.html
@@ -10,35 +10,35 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="parallax.css" />
   <link href="https://fonts.googleapis.com/css2?family=Pirata+One&display=swap" rel="stylesheet">
-   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet" />
 </head>
 
 <body>
- <nav class="navbar navbar-expand-sm sticky-top" style="background-color: #1f1f1f;">
-  <div class="container">
-    <a class="footer-animate navbar-brand text-white fw-bold" href="#">
-      <img src="img/1p.png" alt="Mini Logo" style="height: 40px; border-radius: 50%;" />
-      ChaeDev
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class=" footer-animate navbar-collapse justify-content-end" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link text-white" href="/index.html">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="#strawhat-section">Strawhats Pirates</a>
-        </li>
-         <li class="nav-item">
-          <a class="nav-link text-white" href="#parallax-sec">Parallax</a>
-        </li>
-      </ul>
+  <nav class="navbar navbar-expand-sm sticky-top" style="background-color: #1f1f1f;">
+    <div class="container">
+      <a class="footer-animate navbar-brand text-white fw-bold" href="#">
+        <img src="img/1p.png" alt="Mini Logo" style="height: 40px; border-radius: 50%;" />
+        ChaeDev
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class=" footer-animate navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link text-white" href="/index.html">Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#strawhat-section">Strawhats Pirates</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link text-white" href="#parallax-sec">Parallax</a>
+          </li>
+        </ul>
+      </div>
     </div>
-  </div>
-</nav>
+  </nav>
 
   <section id="parallax-sec">
     <div class="footer-animate keyart" id="parallax">
@@ -55,123 +55,219 @@
     </div>
   </section>
 
-  <section class="footer-animate main-content py-5">
-    <div class="container">
-      
-      <div class="footer-animate text-center mb-4">
-        <img src="img/strawhats/logo.png" alt="One Piece Logo" class="img-fluid" style="max-height: 100px;">
-        <h1 class="onepiece-title " id="strawhat-section">Straw Hat Pirates</h1>
+<section class="footer-animate main-content py-5" style="position: relative; z-index: 10;">
+  <div class="container">
+    <div class="footer-animate text-center mb-5">
+      <img src="img/strawhats/logo.png" alt="One Piece Logo" class="img-fluid" style="max-height: 100px;">
+      <h1 class="onepiece-title" id="strawhat-section">Straw Hat Pirates</h1>
+    </div>
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/luffygif.gif" alt="Luffy GIF" />
       </div>
-      <div class="footer-animate row row-cols-1 row-cols-md-2 g-4">
-
-        <div class="col">
-          <div class="card  text-center">
-            <img src="img/strawhats/luffy1.jpg" class="card-img-top" alt="Luffy">
-            <div class="card-body">
-              <h5 class="card-title">Monkey D. Luffy</h5>
-              <p class="card-text">Captain of the Strawhats Pirates</p>
-            </div>
+      <div class="description-container">
+        <h3>Monkey D. Luffy</h3>
+        <p>Captain of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/luffywanted.webp" alt="Luffy Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/luffy.jpg" alt="Luffy Profile" />
           </div>
         </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/zoro1.jpg" class="card-img-top" alt="Zoro">
-            <div class="card-body">
-              <h5 class="card-title">Roronoa Zoro</h5>
-              <p class="card-text">Swordsman and Right Hand man of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/nami.webp" class="card-img-top" alt="Nami">
-            <div class="card-body">
-              <h5 class="card-title">Nami</h5>
-              <p class="card-text">Navigator of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/ussop.jpg" class="card-img-top" alt="Usopp">
-            <div class="card-body">
-              <h5 class="card-title">Usopp</h5>
-              <p class="card-text">Sniper of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/sanji.jpg" class="card-img-top" alt="Sanji">
-            <div class="card-body">
-              <h5 class="card-title">Sanji</h5>
-              <p class="card-text">Cook and Left Hand man of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/chopper.png" class="card-img-top" alt="Chopper">
-            <div class="card-body">
-              <h5 class="card-title">Tony Tony Chopper</h5>
-              <p class="card-text">Doctor and Healer of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/nico.webp" class="card-img-top" alt="Robin">
-            <div class="card-body">
-              <h5 class="card-title">Nico Robin</h5>
-              <p class="card-text">Archaeologist of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/franky.webp" class="card-img-top" alt="Franky">
-            <div class="card-body">
-              <h5 class="card-title">Franky</h5>
-              <p class="card-text">Shipwright of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/brook.jpg" class="card-img-top" alt="Brook">
-            <div class="card-body">
-              <h5 class="card-title">Brook</h5>
-              <p class="card-text">Musician of the Strawhats Pirates.</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="col">
-          <div class="card text-center">
-            <img src="img/strawhats/jinbei.jpg" class="card-img-top" alt="Jinbe">
-            <div class="card-body">
-              <h5 class="card-title">Jinbe</h5>
-              <p class="card-text">Helmsman of the Strawhats Pirates</p>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
-  </section>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="js/parallax.js"></script>
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/zorogif.gif" alt="Zoro GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Roronoa Zoro</h3>
+        <p>Swordsman and Right Hand of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/zorowanted.jpg" alt="Zoro Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/zoro2.png" alt="Zoro Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/namigif.gif" alt="Nami GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Nami</h3>
+        <p>Navigator of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/namiwanted.jpg" alt="Nami Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/namii.jpg" alt="Nami Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/ussopgif.gif" alt="Usopp GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Usopp</h3>
+        <p>Sniper of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/ussopwanted.jpg" alt="Usopp Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/ussop1.jpg" alt="Usopp Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/sanjigif.gif" alt="Sanji GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Vinsmoke Sanji</h3>
+        <p>Cook of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/sanjiwanted.webp" alt="Sanji Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/sanji.jpg" alt="Sanji Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/choppergif.gif" alt="Chopper GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Tony Tony Chopper</h3>
+        <p>Doctor of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/chopperwanted.jpg" alt="Chopper Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/chopper.png" alt="Chopper Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/robingif.gif" alt="Robin GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Nico Robin</h3>
+        <p>Archaeologist of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/robinwanted.jpg" alt="Robin Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/robin.jpg" alt="Robin Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/frankygif.gif" alt="Franky GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Franky</h3>
+        <p>Shipwright of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/frankywanted.webp" alt="Franky Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/franky.jpg" alt="Franky Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/brookgif.gif" alt="Brook GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Brook</h3>
+        <p>Musician of the Straw Hat Pirates</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/brookwanted.jpg" alt="Brook Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/brook.jpg" alt="Brook Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+      <div class="gif-container me-md-4 mb-4 mb-md-0">
+        <img src="img/gif/jinbegif.gif" alt="Jinbe GIF" />
+      </div>
+      <div class="description-container">
+        <h3>Jinbe</h3>
+        <p>Helmsman and former Warlord of the Sea</p>
+      </div>
+      <div class="card-flip-container">
+        <div class="card-flip">
+          <div class="card-front">
+            <img src="img/wanted poster/jinbewanted.jpg" alt="Jinbe Wanted" />
+          </div>
+          <div class="card-back">
+            <img src="img/strawhats/jinbe.webp" alt="Jinbe Profile" />
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</section>
 
 
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="js/parallax.js"></script>
 </body>
 
 </html>
