--- a/A08/EZ-Parallax-master/banner.html
+++ b/A08/EZ-Parallax-master/banner.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>A08 Parallax & Straw Hat Gallery</title>
-
+  <link rel="icon" href="img/bg.jpg" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="parallax.css" />
@@ -55,214 +55,214 @@
     </div>
   </section>
 
-<section class="footer-animate main-content py-5" style="position: relative; z-index: 10;">
-  <div class="container">
-    <div class="footer-animate text-center mb-5">
-      <img src="img/strawhats/logo.png" alt="One Piece Logo" class="img-fluid" style="max-height: 100px;">
-      <h1 class="onepiece-title" id="strawhat-section">Straw Hat Pirates</h1>
-    </div>
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/luffygif.gif" alt="Luffy GIF" />
+  <section class="footer-animate main-content py-5" style="position: relative; z-index: 10;">
+    <div class="container">
+      <div class="footer-animate text-center mb-5">
+        <img src="img/strawhats/logo.png" alt="One Piece Logo" class="img-fluid" style="max-height: 100px;">
+        <h1 class="onepiece-title" id="strawhat-section">Straw Hat Pirates</h1>
       </div>
-      <div class="description-container">
-        <h3>Monkey D. Luffy</h3>
-        <p>Captain of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/luffywanted.webp" alt="Luffy Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/luffy.jpg" alt="Luffy Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/luffygif.gif" alt="Luffy GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Monkey D. Luffy</h3>
+          <p>Captain of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/luffywanted.webp" alt="Luffy Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/luffy.jpg" alt="Luffy Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/zorogif.gif" alt="Zoro GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Roronoa Zoro</h3>
-        <p>Swordsman and Right Hand of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/zorowanted.jpg" alt="Zoro Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/zoro2.png" alt="Zoro Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/zorogif.gif" alt="Zoro GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Roronoa Zoro</h3>
+          <p>Swordsman and Right Hand of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/zorowanted.jpg" alt="Zoro Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/zoro2.png" alt="Zoro Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/namigif.gif" alt="Nami GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Nami</h3>
-        <p>Navigator of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/namiwanted.jpg" alt="Nami Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/namii.jpg" alt="Nami Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/namigif.gif" alt="Nami GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Nami</h3>
+          <p>Navigator of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/namiwanted.jpg" alt="Nami Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/namii.jpg" alt="Nami Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/ussopgif.gif" alt="Usopp GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Usopp</h3>
-        <p>Sniper of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/ussopwanted.jpg" alt="Usopp Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/ussop1.jpg" alt="Usopp Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/ussopgif.gif" alt="Usopp GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Usopp</h3>
+          <p>Sniper of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/ussopwanted.jpg" alt="Usopp Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/ussop1.jpg" alt="Usopp Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/sanjigif.gif" alt="Sanji GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Vinsmoke Sanji</h3>
-        <p>Cook of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/sanjiwanted.webp" alt="Sanji Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/sanji.jpg" alt="Sanji Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/sanjigif.gif" alt="Sanji GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Vinsmoke Sanji</h3>
+          <p>Cook of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/sanjiwanted.webp" alt="Sanji Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/sanji.jpg" alt="Sanji Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/choppergif.gif" alt="Chopper GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Tony Tony Chopper</h3>
-        <p>Doctor of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/chopperwanted.jpg" alt="Chopper Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/chopper.png" alt="Chopper Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/choppergif.gif" alt="Chopper GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Tony Tony Chopper</h3>
+          <p>Doctor of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/chopperwanted.jpg" alt="Chopper Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/chopper.png" alt="Chopper Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/robingif.gif" alt="Robin GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Nico Robin</h3>
-        <p>Archaeologist of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/robinwanted.jpg" alt="Robin Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/robin.jpg" alt="Robin Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/robingif.gif" alt="Robin GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Nico Robin</h3>
+          <p>Archaeologist of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/robinwanted.jpg" alt="Robin Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/robin.jpg" alt="Robin Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/frankygif.gif" alt="Franky GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Franky</h3>
-        <p>Shipwright of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/frankywanted.webp" alt="Franky Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/franky.jpg" alt="Franky Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/frankygif.gif" alt="Franky GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Franky</h3>
+          <p>Shipwright of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/frankywanted.webp" alt="Franky Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/franky.jpg" alt="Franky Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/brookgif.gif" alt="Brook GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Brook</h3>
-        <p>Musician of the Straw Hat Pirates</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/brookwanted.jpg" alt="Brook Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/brook.jpg" alt="Brook Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/brookgif.gif" alt="Brook GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Brook</h3>
+          <p>Musician of the Straw Hat Pirates</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/brookwanted.jpg" alt="Brook Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/brook.jpg" alt="Brook Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-    <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
-      <div class="gif-container me-md-4 mb-4 mb-md-0">
-        <img src="img/gif/jinbegif.gif" alt="Jinbe GIF" />
-      </div>
-      <div class="description-container">
-        <h3>Jinbe</h3>
-        <p>Helmsman and former Warlord of the Sea</p>
-      </div>
-      <div class="card-flip-container">
-        <div class="card-flip">
-          <div class="card-front">
-            <img src="img/wanted poster/jinbewanted.jpg" alt="Jinbe Wanted" />
-          </div>
-          <div class="card-back">
-            <img src="img/strawhats/jinbe.webp" alt="Jinbe Profile" />
+      <div class="footer-animate d-flex flex-column flex-md-row align-items-center justify-content-between mb-5">
+        <div class="gif-container me-md-4 mb-4 mb-md-0">
+          <img src="img/gif/jinbegif.gif" alt="Jinbe GIF" />
+        </div>
+        <div class="description-container">
+          <h3>Jinbe</h3>
+          <p>Helmsman and former Warlord of the Sea</p>
+        </div>
+        <div class="card-flip-container">
+          <div class="card-flip">
+            <div class="card-front">
+              <img src="img/wanted poster/jinbewanted.jpg" alt="Jinbe Wanted" />
+            </div>
+            <div class="card-back">
+              <img src="img/strawhats/jinbe.webp" alt="Jinbe Profile" />
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
-  </div>
-</section>
+    </div>
+  </section>
 
 
 
